app/src/test/resources/programs/valid/structs/defaultValues.exe
uct Default {
    let x = 10;
    let y : Bool = true;

    ctor() = {}
}

foo main() -> {
    let spam = new Default();
    spam.x
}