app/src/test/resources/programs/invalid/structs/noTypeInference.exe
uct S = {
    let x;
    let mut y;
}

foo main() -> Int = {
    let mut eggs : S = nothing;
    eggs.x;
}